"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2006-10-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-45-instance-02-01:
	  The final branch for reworking the instance-hierarchy for 
		large-scale memory reduction.  
	  This revision: replaced references to instance_alias_base*
		with instance_alias_info (to avoid confusion).  


2006-10-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-45:
	  No source revision.  Test suite now enabled use of automatic
		dependency generation.  


	* HACKT-00-01-04-main-00-80-44:
	  New configure option to enable/disable serialization object
		padding/alignment checking.  Doesn't save much memory, 
		due to per-heap-object header overhead.  


2006-10-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-43-merged-instance-01-14:
	  Branch merge.  Summary:
		Sparse instance collections no longer keep keys with
			values; they are now separated (much simpler).
		Union-find functionality written directly into
			instance_alias_info, no more inheritance.  
		Introduced dense collections for fast and efficient storage
			of packed multidimensional alias collections.  
		All resulting in simpler, cleaner, even faster code.
	  Next branch: reworking subinstance hierarchy for serialization
		and memory efficiency.  


2006-10-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-40-instance-01-14:
	  Perm'd DENSE_FORMAL_COLLECTIONS (-100 LoC).
	  End of branch.  Merge to trunk.  


	* HACKT-00-01-04-main-00-80-40-instance-01-13:
	  Perm'd COLLECTION_SEPARATE_KEY_FROM_VALUE.  (-1000 LoC)
		Entire instance_alias class template is GONE, 
		also removed Object/inst/instance_alias.h.
	  Removed references to devel_switches where not needed.  


2006-10-23	David Fang		<fangism@users.sourceforge.net>
