@@ -10,7 +10,7 @@
 	preprocessor definition.  
 	However, in production code, this file should be EMPTY, 
 	and NO translation unit should depend on this i.e. do not include.  
-	$Id: devel_switches.h,v 1.30 2006/10/24 07:26:55 fang Exp $
+	$Id: devel_switches.h,v 1.30.2.1 2006/10/26 22:31:59 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEVEL_SWITCHES_H__
@@ -73,6 +73,28 @@
  */
 #define	DENSE_FORMAL_VALUE_COLLECTIONS		0
 
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/**
+	Define to 1 to insert the new collection_interface class into the
+	instance collection class hierarchy.  
+	Purpose: to provide an interface for instance_actual_collections.  
+	Affects (also): instance references.  
+	Goal: 1
+	Status: just beginning
+ */
+#define	USE_COLLECTION_INTERFACES		0
+
+// TODO: push super_instance down to instance_collection's.
+
+/**
+	Define to 1 to use per-footprint pools to allocate
+	collections of public substructures (subinstances' port aliases).  
+	Goal: 1?
+	Status: conception
+ */
+#define	PER_FOOTPRINT_PORT_ACTUAL_COLLECTION_POOLS	0
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /**
 	Define to 1 to have port collections use light-weight back-references
 	to footprint's internal collection maps.  
@@ -88,8 +110,9 @@
 	Purpose: turn individually heap-allocated structures into
 		a pseudo-dense collection, referenced by indices.  
 	Affects: instance_alias_info's substructure, subinstance_manager.
+	Better idea: per *footprint* pools.  
 	Goal: ?
-	Status: not begun
+	Status: not begun, likely abandoned.
  */
 #define	MODULE_POOLED_SUBINSTANCE_STRUCTURE	0
 
