@@ -1,13 +1,11 @@
 /**
-	\file "Object/inst/instance_collection.h"
-	Class declarations for scalar instances and instance collections.  
-	This file was originally "Object/art_object_instance_collection.h"
-		in a previous life.  
-	$Id: instance_collection.h,v 1.26.2.2 2006/10/26 22:32:06 fang Exp $
+	\file "Object/inst/collection_interface.h"
+	Abstract class defining the interface for an instance collection.  
+	$Id: collection_interface.h,v 1.1.2.1 2006/10/26 22:32:01 fang Exp $
  */
 
-#ifndef	__HAC_OBJECT_INST_INSTANCE_COLLECTION_H__
-#define	__HAC_OBJECT_INST_INSTANCE_COLLECTION_H__
+#ifndef	__HAC_OBJECT_INST_COLLECTION_INTERFACE_H__
+#define	__HAC_OBJECT_INST_COLLECTION_INTERFACE_H__
 
 #include <iosfwd>
 
@@ -15,24 +13,14 @@
 #include "Object/inst/physical_instance_collection.h"	// for macros
 #include "Object/common/multikey_index.h"
 #include "Object/devel_switches.h"
-#if USE_COLLECTION_INTERFACES
-#include "Object/inst/collection_interface.h"
-#endif
 #include "util/STL/list_fwd.h"
 #include "util/memory/excl_ptr.h"
 #include "util/memory/count_ptr.h"
 #include "util/boolean_types.h"
 #include "util/inttypes.h"
 
-/**
-	Define to 1 if you want instance_arrays and scalars pool-allocated.  
-	Causes regression in one strange test case, needs debugging.  
- */
-#define	POOL_ALLOCATE_INSTANCE_COLLECTIONS		1
-
 namespace HAC {
 namespace entity {
-#if !USE_COLLECTION_INTERFACES
 using std::list;
 using std::default_list;
 using std::istream;
@@ -56,58 +44,37 @@ class const_param_expr_list;
 class unroll_context;
 class subinstance_manager;
 template <bool> class internal_aliases_policy;
-#endif
-template <class> class instantiation_statement;
+// template <class> class instantiation_statement;
 
 //=============================================================================
-template <class, size_t>
-class instance_array;
-
-// forward declaration of partial specialization
-template <class Tag>
-class instance_array<Tag,0>;
-
-//=============================================================================
-#define	INSTANCE_COLLECTION_TEMPLATE_SIGNATURE				\
+#define	COLLECTION_INTERFACE_TEMPLATE_SIGNATURE				\
 template <class Tag>
 
-#define	INSTANCE_COLLECTION_CLASS					\
-instance_collection<Tag>
+#define	COLLECTION_INTERFACE_CLASS					\
+collection_interface<Tag>
 
 /**
-	Interface to collection of instance aliases.  
-	This abstract base class is dimension-generic.  
+	Interface to collections of instance aliases.  
+	Children classes will either be real collections with type information
+	or proxy containers with back-references to real collections.  
  */
-INSTANCE_COLLECTION_TEMPLATE_SIGNATURE
-class instance_collection :
-#if USE_COLLECTION_INTERFACES
-	public collection_interface<Tag>, 
-#else
-	public class_traits<Tag>::instance_collection_parent_type, 
-#endif
-	// TODO: consider pushing down to instance_array_class
-	// to avoid replication between formals and actuals.
-	public class_traits<Tag>::collection_type_manager_parent_type {
-friend	class class_traits<Tag>::collection_type_manager_parent_type;
-friend	class subinstance_manager;
+COLLECTION_INTERFACE_TEMPLATE_SIGNATURE
+class collection_interface :
+	public class_traits<Tag>::instance_collection_parent_type {
 public:
 	typedef	class_traits<Tag>			traits_type;
 private:
 	typedef	Tag					category_type;
-#if USE_COLLECTION_INTERFACES
-	typedef	collection_interface<Tag>		parent_type;
-#else
 	typedef	typename traits_type::instance_collection_parent_type
-#endif
 							parent_type;
-	typedef	INSTANCE_COLLECTION_CLASS		this_type;
+	typedef	COLLECTION_INTERFACE_CLASS		this_type;
 public:
 	typedef	typename traits_type::type_ref_type	type_ref_type;
 	typedef	typename traits_type::type_ref_ptr_type	type_ref_ptr_type;
 	typedef	typename traits_type::resolved_type_ref_type
 						resolved_type_ref_type;
-	typedef	typename traits_type::collection_type_manager_parent_type
-					collection_type_manager_parent_type;
+//	typedef	typename traits_type::collection_type_manager_parent_type
+//					collection_type_manager_parent_type;
 	typedef	typename traits_type::instance_alias_info_type
 						instance_alias_info_type;
 	typedef	never_ptr<instance_alias_info_type>
@@ -116,6 +83,8 @@ public:
 						alias_collection_type;
 	typedef	typename traits_type::instance_placeholder_type
 					instance_placeholder_type;
+	typedef	never_ptr<const instance_placeholder_type>
+					instance_placeholder_ptr_type;
 	typedef	typename traits_type::instance_collection_parameter_type
 					instance_collection_parameter_type;
 	typedef	typename traits_type::simple_meta_instance_reference_type
@@ -125,7 +94,6 @@ public:
 	typedef	typename traits_type::member_simple_meta_instance_reference_type
 				member_simple_meta_instance_reference_type;
 //	typedef	meta_instance_reference_base		meta_instance_reference_base_type;
-// public:
 protected:
 	typedef	typename parent_type::inst_ref_ptr_type	inst_ref_ptr_type;
 	typedef	typename parent_type::member_inst_ref_ptr_type
@@ -137,51 +105,21 @@ protected:
 	typedef	internal_aliases_policy<traits_type::can_internally_alias>
 						internal_alias_policy;
 
-public:
-	typedef	typename traits_type::instantiation_statement_type
-					initial_instantiation_statement_type;
-	typedef	never_ptr<const instance_placeholder_type>
-				instance_placeholder_ptr_type;
 protected:
-	/**
-		TODO: consider pushing to instance_array to avoid
-			replicating between formals and actual collections.  
-		This is a back-reference to the placeholder that resides
-		in the scopespace, that contains basic collection information,
-		prior to unrolling.
-	 */
-	instance_placeholder_ptr_type	source_placeholder;
-protected:
-	instance_collection();
+	collection_interface() : parent_type() { }
 
-	/// requires a back-reference to the source collection placeholder
-	explicit
-	instance_collection(const instance_placeholder_ptr_type);
-
-#if 0
-	instance_collection(const instance_placeholder_ptr_type, 
-		const instance_collection_parameter_type&);
-#endif
 public:
 
-virtual	~instance_collection();
+virtual	~collection_interface() { }
 
 virtual	ostream&
 	what(ostream&) const = 0;
 
-	ostream&
-	type_dump(ostream&) const;
+//	ostream&
+//	type_dump(ostream&) const;
 
 virtual	ostream&
 	dump_element_key(ostream&, const instance_alias_info_type&) const = 0;
-
-#if USE_COLLECTION_INTERFACES
-virtual	ostream&
-	dump_element_key(ostream&, const size_t) const = 0;
-
-virtual	multikey_index_type
-	lookup_key(const size_t) const = 0;
-#endif
 
 virtual	multikey_index_type
 	lookup_key(const instance_alias_info_type&) const = 0;
@@ -193,24 +131,27 @@ virtual	instance_alias_info_type&
 	get_corresponding_element(const this_type&,
 		const instance_alias_info_type&) = 0;
 
-	never_ptr<const physical_instance_placeholder>
-	get_placeholder_base(void) const;
+//	never_ptr<const physical_instance_placeholder>
+//	get_placeholder_base(void) const;
 
+#if 0
+// maybe virtual
 	instance_placeholder_ptr_type
 	get_placeholder(void) const {
 		return this->source_placeholder;
 	}
+#endif
 
 	// TODO: substitute/rename as collection_type_established()
 virtual	bool
 	is_partially_unrolled(void) const = 0;
 
+#if 0
 	// this could just return hard-coded built-in type...
 	// this returns the type as given by the first instantiation statement
 	count_ptr<const fundamental_type_reference>
 	get_unresolved_type_ref(void) const;
-
-	using collection_type_manager_parent_type::get_resolved_canonical_type;
+#endif
 
 	bool
 	must_be_collectibly_type_equivalent(const this_type&) const;
@@ -233,13 +174,11 @@ virtual	bool
 	NOTE: context shouldn't be necessary at the collection, 
 	only needed to resolved placeholders!
  */
-#if !USE_COLLECTION_INTERFACES
 #define	INSTANTIATE_INDICES_PROTO					\
 	good_bool							\
 	instantiate_indices(const const_range_list& i, 			\
 		const instance_relaxed_actuals_type&, 			\
 		const unroll_context&)
-#endif
 
 virtual	INSTANTIATE_INDICES_PROTO = 0;
 
@@ -249,9 +188,10 @@ protected:
 virtual	ALLOCATE_LOCAL_INSTANCE_IDS_PROTO = 0;
 
 public:
-
+#if 0
 	never_ptr<const const_param_expr_list>
 	get_actual_param_list(void) const;
+#endif
 
 virtual instance_alias_info_ptr_type
 	lookup_instance(const multikey_index_type& i) const = 0;
@@ -264,13 +204,11 @@ virtual	bool
 virtual	const_index_list
 	resolve_indices(const const_index_list& l) const = 0;
 
-#if !USE_COLLECTION_INTERFACES
 #define	UNROLL_ALIASES_PROTO						\
 	bad_bool							\
 	unroll_aliases(const multikey_index_type&, 			\
 		const multikey_index_type&, 				\
 		alias_collection_type&) const
-#endif
 
 virtual	UNROLL_ALIASES_PROTO = 0;
 
@@ -287,6 +225,7 @@ public:
 virtual	instance_alias_info_type&
 	load_reference(istream& i) = 0;
 
+#if 0
 	static
 	this_type*
 	make_array(const instance_placeholder_ptr_type);
@@ -294,11 +233,16 @@ virtual	instance_alias_info_type&
 	static
 	this_type*
 	make_port_array(const instance_placeholder_ptr_type);
+#endif
 
+#if 0
 	static
 	persistent*
 	construct_empty(const int);
+#endif
 
+#if 0
+// maybe...
 protected:
 	// not that all alias elements are equal, 
 	// we can factor out common functionality
@@ -371,7 +315,9 @@ protected:
 		ostream&
 		operator () (const instance_alias_info_type&);
 	};	// end struct key_dumper
+#endif
 
+#if 0
 	void
 	collect_transient_info_base(persistent_object_manager&) const;
 
@@ -380,6 +326,7 @@ protected:
 
 	void
 	load_object_base(const persistent_object_manager&, istream&);
+#endif
 
 };	// end class instance_collection
 
@@ -390,5 +337,5 @@ protected:
 // #undef	UNROLL_ALIASES_PROTO
 // #undef	INSTANTIATE_INDICES_PROTO
 
-#endif	// __HAC_OBJECT_INST_INSTANCE_COLLECTION_H__
+#endif	// __HAC_OBJECT_INST_COLLECTION_INTERFACE_H__
 
